# fraud-detection-hub

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
agents/: Dockerfile  README.md  agent-quickstart-values.yaml  docker-compose.yaml  requirements.txt
agents/alert_generator/: agent.py
agents/docker-micro-integration/: Dockerfile.persistence  README.md  config.yaml  db_handler.py  persistence_service.py
agents/k8s/: alert-generator-config.yaml  alert-generator-values.yaml  config.yaml  database-persistence-deployment.yaml  deployments.yaml  emg-gateway-configmap.yaml  emg-gateway-values.yaml  fraud-scorer-values.yaml  init-db-job.yaml  metrics-aggregator-config.yaml  metrics-aggregator-values.yaml  namespace.yaml  transaction-scorer-config.yaml
agents/metrics_aggregator/: agent.py
agents/sam-project/fraud-detection-agents/: README.md  config.yaml  pyproject.toml
agents/sam-project/fraud-detection-agents/scripts/: schema.sql
agents/sam-project/fraud-detection-agents/src/fraud_detection_agents/: __init__.py  alert_generator_tools.py  database.py  lifecycle.py  metrics_aggregator_tools.py  transaction_scorer_tools.py
agents/scripts/: configure-queues.sh  setup-db-queues.sh
agents/solace_agent_mesh/: __init__.py
agents/standalone/: requirements.txt  run_agents.py
agents/transaction_scorer/: agent.py
docs/: CHANGELOG.md  SAM_SETUP.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Header.tsx
src/hooks/: useSAMChat.ts  useSimulator.ts  useSimulatorSAM.ts  useSolaceChat.ts  useSolaceSubscription.ts
(+36 files in other folders)
