[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-agents"
version = "1.0.0"
description = "Fraud Detection SAM Agents - Real-time AI-powered transaction scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",  # PostgreSQL async driver for SAM SQL Connector integration
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
